--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="add-btn" onclick="add3PointHome()">+3</button>
         </div>
         <div class="score-cnt">
-            <h2 class="team-h2">GUEST</h2>
+            <h2 class="team-h2">AWAY</h2>
             <p id="guest-score" class="score-display">0</p>
             <button class="add-btn" onclick="add1PointGuest()">+1</button>
             <button class="add-btn" onclick="add2PointGuest()">+2</button>
